<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Passport Reader</string>
    <string name="live_face">Live face</string>
    <string name="passport_face">Passport face</string>
    <string name="failed_to_read_travel_document">Failed to read passport</string>
    <string name="document_number">Document number</string>
    <string name="personal_number">Personal number</string>
    <string name="document_code">Document code</string>
    <string name="issuing_state">Issuing state</string>
    <string name="date_of_expiry">Date of expiry</string>
    <string name="primary_identifier">Primary identifier</string>
    <string name="secondary_identifiers">Secondary identifiers</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="capture">Capture</string>
    <string name="compare_to_live_selfie">Compare to live selfie</string>
    <string name="details">Details</string>
    <string name="pass_details">The face matching score <xliff:g example="0.6" id="score">%1$.01f</xliff:g> indicates that the person on the ID card is the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards.</string>
    <string name="warning_details">The face matching score <xliff:g example="0.45" id="score">%1$.01f</xliff:g> indicates that the person on the ID card may not be the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards.</string>
    <string name="warning_details_glasses">The face matching score <xliff:g example="0.45" id="score">%1$.01f</xliff:g> indicates that the person on the ID card may not be the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards. The result indicates that you are wearing glasses. Face recognition accuracy may be affected.</string>
    <string name="warning_details_mask">The face matching score <xliff:g example="0.45" id="score">%1$.01f</xliff:g> indicates that the person on the ID card may not be the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards. The result indicates that you are wearing a face covering. Face recognition accuracy may be affected.</string>
    <string name="warning_details_mask_glasses">The face matching score <xliff:g example="0.45" id="score">%1$.01f</xliff:g> indicates that the person on the ID card may not be the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards. The result indicates that you are wearing glasses and a face covering. Face recognition accuracy may be affected.</string>
    <string name="fail_details">The face matching score <xliff:g example="0.1" id="score">%1$.01f</xliff:g> indicates that the person on the ID card is likely NOT the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards.</string>
    <string name="fail_details_glasses">The face matching score <xliff:g example="0.1" id="score">%1$.01f</xliff:g> indicates that the person on the ID card is likely NOT the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards. The result indicates that you are wearing glasses. Face recognition accuracy may be affected.</string>
    <string name="fail_details_mask">The face matching score <xliff:g example="0.1" id="score">%1$.01f</xliff:g> indicates that the person on the ID card is likely NOT the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards. The result indicates that you are wearing a face covering. Face recognition accuracy may be affected.</string>
    <string name="fail_details_mask_glasses">The face matching score <xliff:g example="0.1" id="score">%1$.01f</xliff:g> indicates that the person on the ID card is likely NOT the same person as the one in the selfie. We recommend a threshold of <xliff:g example="0.5" id="threshold">%2$.01f</xliff:g> for a positive identification when comparing faces from identity cards. The result indicates that you are wearing glasses and a face covering. Face recognition accuracy may be affected.</string>
    <string name="pass">Pass</string>
    <string name="warning">Warning</string>
    <string name="fail">Fail</string>
    <string name="nfc_passport_capture">NFC Passport Capture</string>
    <string name="captured_document">Captured Document</string>
    <string name="document_details">Document Details</string>
    <string name="face_comparison">Face Comparison</string>
    <string name="face_capture_failed">Face capture failed</string>
    <string name="face_comparison_failed">Face comparison failed</string>
    <string name="failed_to_start_face_capture_session">Failed to start face capture session</string>
    <string name="capture_mrz">Capture text from passport using your device\'s camera</string>
    <string name="failed_to_save_scan_result">Failed to save scan result</string>
    <string name="digital_signature_verified">Digital signature verified</string>
    <string name="signing_certificate_verified">Signing certificate verified</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="face_covering_detected">Face covering detected</string>
    <string name="sunglasses_detected">Sunglasses detected</string>
</resources>
